2010-09-20  Per Bothner  <per@bothner.com>

	* standard/define.java (rewriteForm):  Don't prematurely getTypeExp
	unless TYPE_SPECIFIED, since doing so forces type to Object.

	* standard/object.java (scanClassDef): Use new ClassExp#addMethoda.

2010-09-17  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite): Pass SourceLocator when
	creating QuoteExp.

2010-09-15  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (formatType): New method.
	(typeToStringMap): New static HashMap.

2010-08-31  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Remove unused --fewer-classes option.

2010-08-27  Per Bothner  <per@bothner.com>

	* standard/map.java: Oved/renamed to gnu/kawa/functions/Map.java.
	* standard/callcc.java: Moved/renamed to gnu/kawa/functions/CallCC.java.
	* standard/Makefile.am: Update accordingly.
	* standard/Scheme.java: Update accordingly.

2010-08-26  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite): Use new ClassExp#getClassType.

2010-08-20  Per Bothner  <per@bothner.com>

	* standard/TracedProcedure.java (applyN): Update since
	setWithSave/setRestore no longer take CallContext argument.

2010-08-19  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid_let.java: Call setFLuid on lexical base.
	* TelnetRepl.java: No longer pass current environment to Future.
	* ReplDocument.java: Various Environment/Fuure updates.

2010-08-17  Per Bothner  <per@bothner.com>

	* lang/Translator.java (isLexical): Remove method.  Moved logic to
	FindCapturedvars.walkReferenceExp.
	(rewrite): Don't call isLexical to check for fluid-variable - it
	causes false postives for --warn-undefined-variable.

2010-08-16  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewriteBody): Change to take an LList.
	This allows using the incoming Pairs for position information.

2010-08-15  Per Bothner  <per@bothner.com>

	* standard/syntax_case.java (rewriteClauses): Check for
	missing output expression.
