@@ -1,8 +1,9 @@
 ;; The next line is just to test the case that we don't extend ModuleBody.
 (module-extends <pair>)
+(module-implements java.io.Closeable)
 (module-export list-length-1 list-length-3 classify list1234 <A8711>
 	       length-diff1 length-diff2 length-diff3 make-literal make-pair
-	       my-array-7 mod2-v5)
+	       my-array-7 mod2-v5 close)
 (require <module1>)
 (require <module1a>)
 (define (list-length-1 x) :: <integer>
@@ -72,3 +73,5 @@
   (let ((loc (location mod1-v5)))
     (+ 10 (loc))))
 
+(define (close) :: void
+  (set! my-array-7 #f))
